--- a/main/src/static/weather.html
+++ b/main/src/static/weather.html
@@ -20,13 +20,13 @@
     /* Set gray background color and 100% height */
     .sidenav {
       padding-top: 20px;
-      background-color: #f1f1f1;
+      background-color: #219EBC;
       height: 100%;
     }
     
     /* Set black background color, white text and some padding */
     footer {
-      background-color: #555;
+      background-color: #023047;
       color: white;
       padding: 15px;
     }
@@ -39,7 +39,20 @@
       }
       .row.content {height:auto;} 
     }
-    h1 {text-align: center;}
+    h1 {
+        text-align: center;
+        color: white;
+    }
+    p {
+        color: white;
+    }
+
+    .text-left {
+        background-color: #023047;
+    }
+    .row content {
+        background-color: #023047;
+    }
   </style>
 </head>
 <body>
