--- a/main/src/static/weather.html
+++ b/main/src/static/weather.html
@@ -53,6 +53,9 @@
     .row content {
         background-color: #023047;
     }
+    .myNavbar {
+        color: white;
+    }
   </style>
 </head>
 <body>
@@ -65,7 +68,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <img src="https://www.brandcrowd.com/gallery/brands/pictures/picture15296669898504.png" alt = "Nautilus" style="width:50px;height:50px;">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
