edited weather html

--- a/main/src/static/weather.html
+++ b/main/src/static/weather.html
@@ -56,6 +56,9 @@
     .myNavbar {
         color: white;
     }
+     .row content {
+        background-color: #FFB703;
+    }
   </style>
 </head>
 <body>
