--- a/menu/src/main/resources/public/mainpage.html
+++ b/menu/src/main/resources/public/mainpage.html
@@ -2,9 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Nautilus</title>
+    <link rel="stylesheet" href="..\assets\style.css">
 </head>
-<body>
-$END$
-</body>
+
+<div class="section">
+        <div class="color-overlay">
+            <h1 style="color:black;">Welcome To Nautilus</h1>
+        </div>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+</div>
+
+
+<!-- Container element -->
+<div class="parallax"></div>
 </html>
