--- a/menu/src/main/resources/public/error/404.html
+++ b/menu/src/main/resources/public/error/404.html
@@ -1,18 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link link rel="stylesheet" href="/static/style.css">
+    <title>404 File Not found</title>
+    <link rel ="stylesheet" href="404.css">
 </head>
 <body>
-<div id="main">
-    <div class="fof">
-        <h1>Error 404</h1>
+    <div id="main">
+        <div class="fof">
+            <h1>Error 404</h1>
+        </div>
     </div>
-</div>
 </body>
-</html>
