--- a/menu/src/main/resources/public/error/404.html
+++ b/menu/src/main/resources/public/error/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>404 File Not found</title>
-    <link rel ="stylesheet" href="404.css">
+    <link rel ="stylesheet" href="error.css">
 </head>
 <body>
 <div id="main">
