--- a/menu/src/main/resources/public/error/404.html
+++ b/menu/src/main/resources/public/error/404.html
@@ -8,6 +8,7 @@
 <div id="main">
     <div class="fof">
         <h1>Error 404</h1>
+        <h2>Requested File Not Found</h2>
     </div>
 </div>
 </body>
