--- a/menu/src/main/resources/public/index.html
+++ b/menu/src/main/resources/public/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Nautilus</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PP</title>
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+            integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+            crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700&display=swap"
+            rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
 </head>
-<div class="section">
-        <div class="color-overlay">
-            <h1 style="color:black;">Welcome To Nautilus</h1>
-        </div>
-</div>
 <body>
-
+<div class="nav">
+    <a href="http://localhost:8080/">Home</a>
+    <a href="http://localhost:8080/weather.html">Weather</a>
+    <a href="http://localhost:8080/stocks.html">Stocks</a>
+    <a href="http://localhost:8080/todo.html">Todo</a>
+    <a href="http://localhost:8080/calendar.html">Calendar</a>
+</div>
+<div class="container">
+    <div class="jumbotron">
+        <h1>Nautilus</h1>
+        <img src="Nautilus.png" alt="Nautilus Logo" style="width:400px;height:400px;">
+        <p>
+            Nautilus is your all-in-one solution to managing your daily tasks in a
+            <b>central</b>
+            dashboard. Created by Tanay and other irrelevant losers for an APCS project,
+            Nautilus is intended to be a replacement for checking the weather, monitoring
+            stocks, looking at your calendar, and managing a todo list.
+        </p>
+    </div>
+</div>
 </body>
-
-
-<!-- Container element -->
-<div class="parallax"></div>
 </html>
