--- a/menu/src/main/resources/public/index.html
+++ b/menu/src/main/resources/public/index.html
@@ -1,42 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PP</title>
-    <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-            integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
-            crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com/" />
-    <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700&display=swap"
-            rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Nautilus</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-<div class="nav">
-    <a href="http://localhost:8080/">Home</a>
-    <a href="http://localhost:8080/weather.html">Weather</a>
-    <a href="http://localhost:8080/stocks.html">Stocks</a>
-    <a href="http://localhost:8080/todo.html">Todo</a>
-    <a href="http://localhost:8080/calendar.html">Calendar</a>
-</div>
-<div class="container">
-    <div class="jumbotron">
+    <div class="main-content">
         <h1>Nautilus</h1>
-        <img src="Nautilus.png" alt="Nautilus Logo" style="width:400px;height:400px;">
-        <p>
-            Nautilus is your all-in-one solution to managing your daily tasks in a
-            <b>central</b>
-            dashboard. Created by Tanay and other irrelevant losers for an APCS project,
-            Nautilus is intended to be a replacement for checking the weather, monitoring
-            stocks, looking at your calendar, and managing a todo list.
-        </p>
+        <h2>Welcome to Nautilus, your hub for productivity. Nautilus hopes to combine many of the apps you use today and create a hub where you can check the weather, stocks, make a ToDo list, and check your calendar, all in one place. </h2>
     </div>
-</div>
+
+    <div class=""></div>
+
+    <div class="container">
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>01</h2>
+                    <h3>Weather</h3>
+                    <p>The weather app tell you the temperature in your selected area, the weather type, chance of rain, and forecasts the weather for the next couple of days.<br><br> </p>
+                    <a href="./weather.html" target="_blank">Run</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>02</h2>
+                    <h3>ToDo List</h3>
+                    <p>The ToDo list app allows users to create new ToDo lists, add items to it, check them off, and more. It tells the users what they have to do based on Calendar and Canvas integration.</p>
+                    <a href="#" target="_blank">Run</a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>03</h2>
+                    <h3>Calendar</h3>
+                    <p>The calendar app allows users to link their Google Calendar and be able to see what events are on their calendar. It will display even name, date, time, and more notes.</p>
+                    <a href="#" target="_blank">Run</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>04</h2>
+                    <h3>Stocks</h3>
+                    <p>The stock app allows users to get an overview of the stock trends for the day and what are the most trending stocks for the day. <br><br><br></p>
+                    <a href="#" target="_blank">Run</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="box">
+                <div class="content">
+                    <h2>05</h2>
+                    <h3>News Briefing</h3>
+                    <p>The news briefing app allows users to get a list of top trending articles in the morning so that the user is caught up on world events and major events. <br> <br></p>
+                    <a href="#" target="_blank">Run</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
