--- a/menu/src/main/resources/public/weather.html
+++ b/menu/src/main/resources/public/weather.html
@@ -42,7 +42,7 @@
     </div>
     <div class="col-sm-8 text-left">
       <h1><c>Weather</c></h1>
-      <p th:text="'Current Temperature: ' + ${current_temp}"/>
+      <p th:text="${current_temp}"></p>
       <p>Feels like Temperature:</p>
       <p>Current Forecast:</p>
       <p>Maximum Temperature:</p>
