--- a/menu/src/main/resources/public/weather.html
+++ b/menu/src/main/resources/public/weather.html
@@ -42,7 +42,7 @@
     </div>
     <div class="col-sm-8 text-left">
 
-      <h1 th:text = "${current_temp}"><c></c></h1>
+      <p th:text = "${current_temp}"><c></c></p>
       <p th:text ="${feels_like}"></p>
       <p th:text ="${forecast}"></p>
       <p th:text ="${max_temp}"></p>
